--- a/TacoCat/CSS/custom.css
+++ b/TacoCat/CSS/custom.css
@@ -199,3 +199,9 @@ input:focus {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size:20px;
 }
+
+.fix {
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
+}
